# goodtools

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  build_wheels.sh  main.py  setup.py
.github/workflows/: pylint.yml  python-publish.yml
include/: core.h
pygoodtools/: __init__.py
pygoodtools-gtcv/gtcv/: ColorModule.py  FPS.py  FaceDetectionModule.py  PIDModule.py  PoseModule.py  SelfiSegmentation.py  utils.py
pygoodtools/arm/: __init__.py
pygoodtools/arm/objects/: ArmPointer.py
pygoodtools/basetools/: __init__.py  convert.py
pygoodtools/basetypes/: Const.py  HashMap.py  Map.py  TreeMap.py  UniqueMap.py  UnorderedMap.py  __init__.py  _typing.py
pygoodtools/core/: Callback.py  Implemented.py  Meta.py  Observer.py  Pointer.py  Signal.py  SmartPointer.py  TimeitPtr.py  Timer.py  __init__.py
pygoodtools/fasttools/: __init__.py  cache.py  retry.py  type_checked.py
pygoodtools/gtmaps/: HashMap.py
scripts/: bindings.cpp
wheelhouse/: pygoodtools-0.4.715-cp310-cp310-linux_x86_64.whl  pygoodtools-0.4.715-cp311-cp311-linux_x86_64.whl  pygoodtools-0.4.715-cp312-cp312-linux_x86_64.whl
